# YouTube-genai

./: .env-template  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  prompt.yaml  pyproject.toml
app/: __init__.py  router.py
app/services/: summary_service.py  youtube_service.py
examples-blog-posts-generated/Ollama/Video-ITBuilders_Fury/: 4Xm9F1qUYdA.json  blog_post.md
examples-blog-posts-generated/Ollama/Video-ITBuilders_SoftSkills/: blog_post.md  rvazWQ3Oi30.json
examples-blog-posts-generated/Ollama/Video-Innersourcing_DevRelSkills/: EONoIdGNY1g.json  blog_post.md
examples-blog-posts-generated/Ollama/Video-Noticia_Deepseek/: blog_post.md  ycYMe4qrjWE.json
examples-blog-posts-generated/OpenAI/Video-ITBuilders_Fury/: 4Xm9F1qUYdA-gpt4o-mini.json  4Xm9F1qUYdA.json  blog_post-gpt4o-mini.md  blog_post.md
examples-blog-posts-generated/OpenAI/Video-ITBuilders_SoftSkills/: blog_post-gpt3.5-turbo2.md  blog_post-gpt4o-mini.md  blog_post-gtp4-turbo.md  blog_post.md  rvazWQ3Oi30-gpt4o-mini.json  rvazWQ3Oi30.json
examples-blog-posts-generated/OpenAI/Video-Innersourcing_DevRelSkills/: EONoIdGNY1g.json  blog_post.md
examples-blog-posts-generated/OpenAI/Video-Noticia_Deepseek/: blog_post.md  ycYMe4qrjWE.json
examples-blog-posts-generated/OpenAI/Video-OpenSource_MELIOspo/: ZV-K7In0qao.json  blog_post.md  blog_post2.md
frontend/: index.html
